# Embodied_Challenge

./: .gitignore  README.md  merge_config.json  pyproject.toml
assets/Beaker/: Beaker.usd  beaker.ply
assets/PaperCup/: blue_cup.ply  green_cup.ply  red_cup.ply
assets/beaker_mixer/: beaker_mixer.mtl
assets/bottle/: bottle.mtl
assets/button/: button.urdf
assets/guijiao_standard/: 1guijiao_standard.ply  2guijiao_standard.ply
assets/pipette_good/: 111.usda  pipette_good.urdf  pipette_good.usd  xmh_bake.usda
assets/tomato/: asset.json
configs/Articulated_object_operation/: action_config.json  gym_config.json
configs/Beat_Hammer_Block/: action_config.json  action_config_align_real.json  action_config_table_height.json  gym_config.json  gym_config_align_real.json  gym_config_clear.json  gym_config_random.json  gym_config_random_test.json  gym_config_table_height.json
configs/beaker_mixer/: action_config.json  action_config_dual.json  action_config_duel.json  gym_config.json  gym_config_dual_clear.json  gym_config_dual_random.json  (+2 more)
launch/: Click_Button.sh  Rearrangement.sh  _print_available_tasks.sh  beaker_mixer.sh  beaker_mixer_duel.sh  click_button.sh  collect_combined_dataset.sh  drawer_open_place.sh  items_handover_place.sh  manipulate_pipette.sh  run_task.sh  sample_loading_dual.sh  sample_loading_duel.sh
robosynchallenge/: __init__.py
scripts/: README.md  _find_latest_datasets.py  add_lerobot_eef_pose.py  analyze_rigid_spawn_range.py  camera_extrinsics_to_lootat.py  convert_lerobot3.0_to_2.1.py  eval_openpi0_embodichain.py  run_env.py
(+169 files in other folders)
